# loglan82

./: .gitignore  .travis.yml  CHANGES  CMakeLists.txt  Dir  README.md  Vagrantfile  appveyor.yml  configure  mfile
cmake/: FindF2C.cmake
compiller/: CMakeLists.txt  Compiller.cpp  Compiller.h  IncludeFile.cpp  IncludeFile.h  main.cpp
doc/: ansi.html  gui.html  gui1.html  gui2.html  iiuwgraph.html  index.html  langg.html  machine.html
edit/: editor.cpp  editor.h  mfile  moc_editor.cpp
examp/: graf.txt
examp/classes/: gui.inc
examples/: graf.dta  graf1.dta  graf2.dta  md5sums
examples/classes/: ansi.inc  gui.inc  machine.inc
graph/: loggraph.cpp  mfile
head/: comm.h  genint1.h
help/: help.cpp  mfile
inst/: INSTALL  LICENSE.GNU  gen  loglan
int/: cint.c  compact.c  control.c  depend.h  execute.c  fileio.c  genint.h  handler.c  int.h  intproto.h  memory.c  mfile  nonstand.h  object.c  procaddr.c  process.c  process.h  queue.h  rpcall.c  runsys.c  standard.c  typchk.c  util.c
interpreter/: CMakeLists.txt  cint.c  compact.c  control.c  debug.h  depend.h  eventque.h  execute.c  fileio.c  genint.h  genint1.h  getline.c  handler.c  int.h  intdt.c  intproto.h  makefile  makefile.old  memory.c  nonstand.c  nonstand.h  object.c  procaddr.c  process.c  process.h  queue.c  queue.h  rpcall.c  runsys.c  sockets.c  sockets.h  socu.h  standard.c  typchk.c  util.c
kernel/: kernel.cpp  mfile
lgconfig/: lgconfig.cpp  mfile
net/: lognet.cpp  mfile  soct.h
pass1/: CMakeLists.txt  Makefile  al11.ff  al12.ff  al13.ff  blank.doc  blank.h  blank2.h  blank3.h  debug.f  dsw.f  hash.f  ifun.f  it0.ff  it1.ff  kopiaal11.f  main.c  makefil  makefile.old  memfil.c  ml2.f  ml3.c  msdos.lnk  resume.f  scan.ff  spgrec.f  statist.f  stdio.c  stos.h  unix.lnk  wan1.ff  wan2.f  wan3.f
pass1/names/: doctext.pas  exec.pas  names  nazwy.pas  printmem.pas  search.for
pass2/: CMakeLists.txt  deb.c  genint.h  genio.c  genprot.c  lcode.c  logen.c  mainvar.c  makefile  oxen.h
preproc/: mfile  prep.cpp
src/: CMakeLists.txt  Configurations.cpp  Configurations.h  Graphics.cpp  Graphics.h  GraphicsWindow.cpp  GraphicsWindow.h  Launcher.cpp  Launcher.h  Runner.cpp  Runner.h  VLPMainWindow.cpp  VLPMainWindow.h  VM.cpp  VM.h  VMServerThread.cpp  VMServerThread.h  backward.cpp  graphicsmain.cpp  launcher.cpp  vlp.cpp  vlp.desktop  vlp.rc  vm.cpp  vmmain.cpp
src/vlp/: App.cpp  App.h  MainWindow.cpp  MainWindow.h  MessageDialog.cpp  MessageDialog.h
src/vm/: Configurations.cpp  Configurations.h  ServerThread.cpp  ServerThread.h  VM.cpp  VM.h
