CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
option(DISTRIBUTION "DISTRIBUTION")
option(ARCHITECTURE "ARCHITECTURE")
option(BASIC BASIC)
ADD_SUBDIRECTORY(pass1)
ADD_SUBDIRECTORY(pass2)
ADD_SUBDIRECTORY(interpreter)
IF(NOT ${BASIC})
ADD_SUBDIRECTORY(compiller)
ADD_SUBDIRECTORY(src)
ENDIF()
SET(CPACK_GENERATOR "DEB:RPM:NSIS")
SET(PACKAGE_VERSION "0.1.3")
SET(CPACK_PACKAGE_VERSION "${PACKAGE_VERSION}")
IF(${BASIC})
SET(CPACK_PACKAGE_NAME "vlp-basic")
ELSE()
SET(CPACK_PACKAGE_NAME "vlp")
ENDIF()
SET(CPACK_PACKAGE_VENDOR "http://lemlang.org/")
SET(CPACK_PACKAGE_CONTACT "Andrzej Zadrozny <azadrozny@gmail.com>")
SET(CPACK_PACKAGE_DESCRIPTION_SUMMARY "Loglan language and Virtual Loglan Processor")
#deb
SET(CPACK_DEBIAN_PACKAGE_SHLIBDEPS ON)
#debian package name
if( DISTRIBUTION AND ARCHITECTURE)
set(CPACK_PACKAGE_FILE_NAME "${CPACK_PACKAGE_NAME}_${PACKAGE_VERSION}-${DISTRIBUTION}_${ARCHITECTURE}")
ENDIF()
#nsis
SET(CPACK_MONOLITHIC_INSTALL 1)
SET(CPACK_NSIS_MODIFY_PATH ON)

IF(NOT ${BASIC})
#inclide cpack
IF(WIN32)
INSTALL(DIRECTORY examples DESTINATION /)
INSTALL(FILES C:/wxWidgets-3.0.1/lib/gcc_dll/wxbase30u_gcc_cl.dll DESTINATION bin)
ELSE(WIN32)
install(DIRECTORY examples DESTINATION share/vlp)
#rpm
SET(CPACK_RPM_PACKAGE_GROUP "Development/Languages")
ENDIF(WIN32)
ENDIF()

SET(CPACK_RESOURCE_FILE_LICENSE ${PROJECT_SOURCE_DIR}/license.txt)
SET(CPACK_NSIS_MODIFY_PATH ON)

INCLUDE(CPack)
enable_testing()
