CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
option(DISTRIBUTION "DISTRIBUTION")
option(ARCHITECTURE "ARCHITECTURE")
option(BASIC BASIC)
ADD_SUBDIRECTORY(pass1)
ADD_SUBDIRECTORY(pass2)
ADD_SUBDIRECTORY(interpreter)
IF(NOT ${BASIC})
ADD_SUBDIRECTORY(compiller)
ADD_SUBDIRECTORY(src)
ENDIF()
SET(CPACK_GENERATOR "DEB:RPM:NSIS")
SET(PACKAGE_VERSION "0.1.3")
SET(CPACK_PACKAGE_VERSION "${PACKAGE_VERSION}")
IF(${BASIC})
SET(CPACK_PACKAGE_NAME "vlp-basic")
ELSE()
SET(CPACK_PACKAGE_NAME "vlp")
ENDIF()
SET(CPACK_PACKAGE_VENDOR "http://lemlang.org/")
SET(CPACK_PACKAGE_CONTACT "Andrzej Zadrozny <azadrozny@gmail.com>")
SET(CPACK_PACKAGE_DESCRIPTION_SUMMARY "Loglan language and Virtual Loglan Processor")
#deb
SET(CPACK_DEBIAN_PACKAGE_SHLIBDEPS ON)
SET(CPACK_DEBIAN_PACKAGE_REPLACES vlp)
SET(CPACK_DEBIAN_PACKAGE_REPLACES vlp-basic)
#debian package name
if( DISTRIBUTION AND ARCHITECTURE)
set(CPACK_PACKAGE_FILE_NAME "${CPACK_PACKAGE_NAME}_${PACKAGE_VERSION}-${DISTRIBUTION}_${ARCHITECTURE}")
ENDIF()
#nsis
SET(CPACK_MONOLITHIC_INSTALL 1)
SET(CPACK_NSIS_MODIFY_PATH ON)

IF(NOT ${BASIC})
IF(WIN32)
	INSTALL(DIRECTORY examples DESTINATION /)
	if( MINGW )
		MESSAGE( STATUS "    Installing system-libraries: MinGW DLLs." )
		get_filename_component( Mingw_Path ${CMAKE_CXX_COMPILER} PATH )
		SET( CMAKE_INSTALL_SYSTEM_RUNTIME_LIBS ${CMAKE_INSTALL_SYSTEM_RUNTIME_LIBS} ${Mingw_Path}/mingwm10.dll ${Mingw_Path}/libgcc_s_dw2-1.dll ${Mingw_Path}/libstdc++-6.dll )
	endif( MINGW )
	SET(CPACK_PACKAGE_EXECUTABLES "vlp" "Virtual Loglan Processor")
ELSE(WIN32)
	install(DIRECTORY examples DESTINATION share/vlp)
	#rpm
	SET(CPACK_RPM_PACKAGE_GROUP "Development/Languages")
ENDIF(WIN32)
ENDIF()

SET(CPACK_RESOURCE_FILE_LICENSE ${PROJECT_SOURCE_DIR}/license.txt)
SET(CPACK_NSIS_MODIFY_PATH ON)

INCLUDE( InstallRequiredSystemLibraries )
INCLUDE(CPack)
enable_testing()
